versioned_docs/version-1.14.2/reference/cli/epinio.md
---
sidebar_label: epinio cli
title: ""
description: epinio cli
keywords: [epinio, kubernetes, epinio cli]
doc-type: [reference]
doc-topic: [epinio, reference, epinio-cli, epinio-cli]
doc-persona: [epinio-developer, epinio-operator]
---
## epinio

Epinio cli

### Synopsis

epinio cli is the official command line interface for Epinio PaaS 

### Options

```
  -H, --header stringArray       Add custom header to every request executed
  -h, --help                     help for epinio
  -c, --kubeconfig string        (KUBECONFIG) path to a kubeconfig, not required in-cluster
      --log-level string         (LOG_LEVEL) Only prints log messages at or above this level (debug, info, warn, error, fatal) (default "info")
      --no-colors                Suppress colorized output
      --settings-file string     (EPINIO_SETTINGS) set path of settings file (default "~/.config/epinio/settings.yaml")
      --skip-ssl-verification    (SKIP_SSL_VERIFICATION) Skip the verification of TLS certificates
      --timeout-multiplier int   (EPINIO_TIMEOUT_MULTIPLIER) Multiply timeouts by this factor (default 1)
      --verbosity int            (VERBOSITY) Only print progress messages at or above this level (0 or 1, default 0)
```

### SEE ALSO

* [epinio app](./app/epinio_app.md)	 - Epinio application features
* [epinio buildimage](./buildimage/epinio_buildimage.md)	 - Epinio builder image management
* [epinio client-sync](./epinio_client-sync.md)	 - Downloads a client binary matching the currently logged server
* [epinio completion](./epinio_completion.md)	 - Generate completion script for a shell
* [epinio configuration](./configuration/epinio_configuration.md)	 - Epinio configuration features
* [epinio export-registries](./epinio_export-registries.md)	 - List export registries
* [epinio gitconfig](./gitconfig/epinio_gitconfig.md)	 - Epinio git configuration management
* [epinio info](./epinio_info.md)	 - Shows information about the Epinio environment
* [epinio login](./epinio_login.md)	 - Epinio login to the server
* [epinio logout](./epinio_logout.md)	 - Epinio logout from server
* [epinio namespace](./namespace/epinio_namespace.md)	 - Epinio-controlled namespaces
* [epinio push](./epinio_push.md)	 - Push an application declared in the specified manifest
* [epinio server](./epinio_server.md)	 - Starts the Epinio server.
* [epinio service](./service/epinio_service.md)	 - Epinio service management
* [epinio settings](./settings/epinio_settings.md)	 - Epinio settings management
* [epinio target](./epinio_target.md)	 - Targets an epinio-controlled namespace.
* [epinio version](./epinio_version.md)	 - Print the version number

